# SimplexMotion-driver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: SimplexMotion-com.cpp  SimplexMotion-com.h  SimplexMotion-hidapi.cpp  SimplexMotion-hidraw.cpp  SimplexMotion-registers.h  SimplexMotion.cpp  SimplexMotion.h  SimplexMotion_ControlThread.cpp  SimplexMotion_ControlThread.h
test/: test.cpp
